--- a/web-page-pi/index.html
+++ b/web-page-pi/index.html
@@ -5,9 +5,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <div class="mascotdiv">
-      <h1 class="titulo">Olá, sou seu Assistente Virtual de Viagens, <br> clique no botão abaixo e diga "iniciar" para começar!</h1>
-      <img class="mascot" src="alien-mascot.png" alt="Alien acenando">
+    <div class="position">
+      <div class="comments">
+        <div class="comment bubble">
+          <p class="fontbubble">Olá, estou aqui para auxiliá-lo em sua viagem com mapas, rotas e muito mais.<br> Para iniciar, clique no botão abaixo e diga "iniciar."</p>
+        </div>
+      </div>
+      <img class="assistant" src="assistente2.png">
     </div>
     <div class= "buttondiv">
       <button class="button1 buttoncolor" id="start">Clique aqui!</button>
