--- a/web-page-pi/index.html
+++ b/web-page-pi/index.html
@@ -8,13 +8,13 @@
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p class="fontbubble">Olá, estou aqui para auxiliá-lo em sua viagem com mapas, rotas e muito mais.<br> Para iniciar, clique no botão abaixo e diga "iniciar."</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos clique no botão abaixo e fale "iniciar."</p>
         </div>
       </div>
-      <img class="assistant" src="assistente2.png">
+      <img class="assistant" src="assistente5.png">
     </div>
     <div class= "buttondiv">
-      <button class="button1 buttoncolor" id="start">Clique aqui!</button>
+      <button class="button1 buttoncolor" id="start"><img src="buttonimage7.png"></button>
       <script src="js/iniciarvoz.js"></script>
     </div>
   </body>
