--- a/web-page-pi/index.html
+++ b/web-page-pi/index.html
@@ -8,7 +8,7 @@
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos clique no botão abaixo e fale "iniciar."</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão abaixo e fale "iniciar".</p>
         </div>
       </div>
       <img class="assistant" src="assistente5.png">
