--- a/web-page-pi/index.html
+++ b/web-page-pi/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <header>
+      <a href="https://github.com/arienemaiara/assistente-voz-viagens"><img src="github.png"></a>
+    </header>
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
