--- a/web-page-pi/index.html
+++ b/web-page-pi/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a href="https://github.com/arienemaiara/assistente-voz-viagens"><img src="github.png"></a>
+      <a href="https://github.com/arienemaiara/assistente-voz-viagens" target="_blank"><img src="github.png"></a>
     </header>
     <div class="position">
       <div class="comments">
