--- a/web-page-pi/homepage.html
+++ b/web-page-pi/homepage.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="wip3.png">
+      <img class= "wip" src="wip3.png">
     </div>
     <div class="container2">
       <p>Desculpe, <u>P.I.</u> em construção...</p>
