--- a/pagina-conversao-moedas.html
+++ b/pagina-conversao-moedas.html
@@ -1,17 +1,84 @@
 <!DOCTYPE html>
-<html>
+<htm>
   <head>
     <title>Assistente de Viagem - Conversão de Moeda</title>
     <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
 
     <!--jquery é necessário para pegar os dados da api no método que uso
     jquery hosteado pela google, assim não precisa baixar nada-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src= "moedas.js"></script>
   </head>
 
   <body>
-      <script src = "moedas.js"></script>
+
+    <!--seleçao das moedas e o valor-->
+    <label for= "moeda1">Selecione uma moeda:</label>
+      <br>
+    <select name= "moeda1" id= "moeda1">
+      <option value= "BRL">Real</option>
+      <option value= "USD">Dólar Americano</option>
+      <option value= "EUR">Euro</option>
+    </select>
+      <br> <br>
+
+    <label for= "valor">Digite um valor:</label>
+      <br>
+    <input type= "number" id= "valor" value= "1.00">
+      <br> <br>
+
+    <label for= "moeda2">Selecione a moeda para conversão:</label>
+      <br>
+    <select name= "moeda2" id= "moeda2">
+      <option value= "BRL">Real</option>
+      <option value= "USD">Dólar Americano</option>
+      <option value= "EUR">Euro</option>
+    </select>
+    <br> <br>
+
+    <button  onclick= "conversao()">Converter</button>
+      <br>
+
+    <!--onde o resultado irá aparecer:-->
+    <p id= "resultado"></p>
+
+
+    <script>
+    function conversao() {
+      var script_moeda1 = document.getElementById("moeda1").value;
+      var script_moeda2 = document.getElementById("moeda2").value;
+      var script_valor = document.getElementById("valor").value;
+
+      //contas realizadas no "moedas.js", aqui apenas pega a variavel com a conversao já feita
+      if (script_moeda1 == "BRL") {
+        if (script_moeda2 == "USD") {
+          document.getElementById("resultado").innerHTML = (real_dolar * script_valor).toFixed(3);
+
+        } else if (script_moeda2 == "EUR") {
+          document.getElementById("resultado").innerHTML = (real_euro * script_valor).toFixed(3);
+
+        }
+      } else if (script_moeda1 == "USD") {
+        if (script_moeda2 == "BRL") {
+          document.getElementById("resultado").innerHTML = (dolar_real * script_valor).toFixed(3);
+
+        } else if (script_moeda2 == "EUR") {
+          document.getElementById("resultado").innerHTML = (dolar_euro * script_valor).toFixed(3);
+
+        }
+      } else if (script_moeda1 == "EUR") {
+        if (script_moeda2 == "BRL") {
+          document.getElementById("resultado").innerHTML = (euro_real * script_valor).toFixed(3);
+
+        } else if (script_moeda2 == "USD") {
+          document.getElementById("resultado").innerHTML = (euro_dolar * script_valor).toFixed(3);
+        }
+      } else if (script_moeda1 == script_moeda2){
+        document.getElementById("resultado").innerHTML = script_valor;
+      }
+    }
+
+    </script>
 
   </body>
 
