Acrescentei a função de clima na homepage

--- a/homepage.html
+++ b/homepage.html
@@ -44,6 +44,10 @@
               <script src="js/iniciarvoz2.js"></script>
             </button>
           </div>
+          <div class="boxes">
+            <a href="busca_clima.html"><p>Clique aqui e veja o clima da cidade onde voce êstá</p></a>
+            </button>
+          </div>
         </div>
       </div>
     </div>
