Update04. Adicionado funcao clima

--- a/homepage.html
+++ b/homepage.html
@@ -45,7 +45,11 @@
             </button>
           </div>
           <div class="boxes">
-            <a href="busca_clima.html"><p>Clique aqui e veja o clima da cidade onde voce êstá</p></a>
+            <img src= "img/clima.png">
+            <p>Clique no botão e fale "clima" e veja o clima da cidade onde voce êstá.</p>
+            <button id="start3" class="button-style">
+              <img src="img/mic2.png">
+              <script src="js/iniciarvoz3.js"></script>
             </button>
           </div>
         </div>
