Update01. Index e Homepage com apenas comando de voz.

--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
     <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style2.css">
     <p id="output"></p>
+    <script src="js/iniciarvozteste0.js"></script>
   </head>
 
   <body>
@@ -29,28 +30,19 @@
       <div class="container2">
         <div class="container3">
           <div class="boxes">
-            <img src="img/map2.png">
-            <p>Clique no botão e fale o nome do destino para ser direcionado até o mapa.</p>
-            <button id="start" class="button-style">
-              <img src="img/mic2.png">
-              <script src="js/mapa.js"></script>
-            </button>
+            <img class="target" src="img/map2.png">
+            <p>Fale "mapa" para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
+
           </div>
           <div class="boxes">
             <img src="img/dollar-sign1.png">
-            <p>Clique no botão e fale "calculadora" para abrir nosso conversor de moeda!</p>
-            <button id="start2" class="button-style">
-              <img src="img/mic2.png">
-              <script src="js/iniciarvoz2.js"></script>
-            </button>
+            <p>Fale "calculadora" para abrir nosso conversor de moeda.</p>
+
           </div>
           <div class="boxes">
             <img src= "img/clima.png">
-            <p>Clique no botão e fale "clima" e veja o clima da cidade onde voce êstá.</p>
-            <button id="start3" class="button-style">
-              <img src="img/mic2.png">
-              <script src="js/iniciarvoz3.js"></script>
-            </button>
+            <p>Fale "clima" e veja o clima da cidade onde voce está.</p>
+
           </div>
         </div>
       </div>
