--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </div>
       </div>
       <img class="assistant" src="img/assistente5.png">
+      <script src="js/iniciarvozteste.js"></script>
     </div>
     <div class= "buttondiv">
       <button class="button1 buttoncolor" id="start"><img src="img/buttonimage7.png"></button>
-      <script src="js/iniciarvoz.js"></script>
     </div>
   </body>
 </html>
