Update02. Página interia por comando de voz menos calculadora.

--- a/climapage.html
+++ b/climapage.html
@@ -3,6 +3,7 @@
   <head>
     <title>Assistente de Viagem - Clima</title>
     <script src= "js/clima.js"></script>
+    <script src= "js/voltar.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
