--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão abaixo e fale "iniciar".</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, fale "iniciar".</p>
         </div>
       </div>
       <img class="assistant" src="img/assistente5.png">
