--- a/pagina-conversao-moedas.html
+++ b/pagina-conversao-moedas.html
@@ -8,6 +8,7 @@
     jquery hosteado pela google, assim não precisa baixar nada-->
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src= "js/moedas.js"></script>
+    <script src= "js/voltar.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
