--- a/pagina-conversao-moedas.html
+++ b/pagina-conversao-moedas.html
@@ -7,8 +7,8 @@
     <!--jquery é necessário para pegar os dados da api no método que uso
     jquery hosteado pela google, assim não precisa baixar nada-->
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src= "js/moedas.js"></script>
-    <script src= "js/voltar.js"></script>
+    <script src=js/moedas.js></script>
+    <script src= "js/moedas-voice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
@@ -20,12 +20,16 @@
     </div>
       <div id="survey-form">
         <div class="quote2">
+          <b>Você pode falar ou fazer manualmente!</b>
+          <p>Fale desta forma: "NUMERO de DÓLAR/EURO/REAL para DÓLAR/EURO/REAL"<br>
+          Exemplo: "50 de dólar para real"</p>
+
           <label for= "moeda1">Selecione uma moeda:</label>
           <br>
           <select name= "moeda1" id= "moeda1">
-            <option value= "BRL">Real</option>
             <option value= "USD">Dólar Americano</option>
             <option value= "EUR">Euro</option>
+            <option value= "BRL">Real</option>
           </select>
           <br> <br>
 
@@ -37,9 +41,9 @@
         <label for= "moeda2">Selecione a moeda para conversão:</label>
         <br>
         <select name= "moeda2" id= "moeda2">
-          <option value= "BRL">Real</option>
           <option value= "USD">Dólar Americano</option>
           <option value= "EUR">Euro</option>
+          <option value= "BRL">Real</option>
         </select>
         <br> <br>
 
@@ -61,29 +65,27 @@
       //contas realizadas no "moedas.js", aqui apenas pega a variavel com a conversao já feita
       if (script_moeda1 == "BRL") {
         if (script_moeda2 == "USD") {
-          document.getElementById("resultado").innerHTML = (real_dolar * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "$ " + (real_dolar * script_valor).toFixed(3);
 
         } else if (script_moeda2 == "EUR") {
-          document.getElementById("resultado").innerHTML = (real_euro * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "&euro; " + (real_euro * script_valor).toFixed(3);
 
         }
       } else if (script_moeda1 == "USD") {
         if (script_moeda2 == "BRL") {
-          document.getElementById("resultado").innerHTML = (dolar_real * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "R$ " + (dolar_real * script_valor).toFixed(3);
 
         } else if (script_moeda2 == "EUR") {
-          document.getElementById("resultado").innerHTML = (dolar_euro * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "&euro; " + (dolar_euro * script_valor).toFixed(3);
 
         }
       } else if (script_moeda1 == "EUR") {
         if (script_moeda2 == "BRL") {
-          document.getElementById("resultado").innerHTML = (euro_real * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "R$ " + (euro_real * script_valor).toFixed(3);
 
         } else if (script_moeda2 == "USD") {
-          document.getElementById("resultado").innerHTML = (euro_dolar * script_valor).toFixed(3);
+          document.getElementById("resultado").innerHTML = "$ " + (euro_dolar * script_valor).toFixed(3);
         }
-      } else if (script_moeda1 == script_moeda2){
-        document.getElementById("resultado").innerHTML = script_valor;
       }
     }
 
