Criação da função noticias com arquivos news.html e news.js, e testes diferentes e não finalizados da mesma função nos arquivos newsInTest.html e newsInTest.js

--- a/homepage.html
+++ b/homepage.html
@@ -44,6 +44,10 @@
             <p>Fale "clima" e veja o clima da cidade onde voce está.</p>
 
           </div>
+          <div class="boxes">
+            <p>Fale "assuntos" e veja as informações da cidade onde voce está.</p>
+
+          </div>
         </div>
       </div>
     </div>
