Update05. Novas funções adicionadas.

--- a/perdidopage.html
+++ b/perdidopage.html
@@ -3,21 +3,21 @@
   <head>
     <title>Assistente de Viagem - Clima</title>
     <meta charset = "utf-8" />
-    <script src= "js/clima.js"></script>
+    <script src= "js/perdido.js"></script>
     <script src= "js/voltar.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
+    <p id="demo" class="hidden"></p>
+    <script src= "js/perdido.js"></script>
   </head>
 
   <body>
     <div class="container">
-      <h1 class="city" class="title">...</h1>
+      <h1 class="city" class="title">Perdido?</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <img src="img/clima1.png">
-          <p class="city"></p>
-          <p id="resultado2"><span id="resultado2">0</span>C°</p>
+          <p class="city" id="resultado">Fale "perdido" que acharemos sua posição!</p>
         </div>
         </div>
       </div>
