--- a/homepage.html
+++ b/homepage.html
@@ -4,24 +4,21 @@
     <title>Assistente</title>
     <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style2.css">
-    <p id="output"></p>
-    <script src="js/iniciarvozteste0.js"></script>
+    <script src="js/vozhomepage.js"></script>
   </head>
-
   <body>
-
     <div class="container">
 
         <nav class="navbar-container">
           <ul class="list-style">
             <li class="list-style2">
               <a class="link-style" target="_blank" href="https://github.com/arienemaiara/assistente-voz-viagens">
-              <img src="img/github2.png">Github
+              <img src="img/github2.png" alt="ícone do github">Github
               </a>
             </li>
             <li class="list-style2">
               <a class="link-style" href="#">
-                <img src="img/book.png">Documentação
+                <img src="img/book.png" alt="ícone de um livro representando a página de documentação">Documentação
               </a>
             </li>
           </ul>
@@ -29,25 +26,52 @@
 
       <div class="container2">
         <div class="container3">
+          <div class="innercontainer">
           <div class="boxes">
-            <img class="target" src="img/map2.png">
+            <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
             <p>Fale "mapa" para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
 
           </div>
+          <br>
+
           <div class="boxes">
-            <img src="img/dollar-sign1.png">
+            <img  src="img/dollar-sign1.png" alt="ícone de um dólar representando função calculadora">
             <p>Fale "calculadora" para abrir nosso conversor de moeda.</p>
 
           </div>
+        </div>
+
+        <div class="innercontainer">
           <div class="boxes">
-            <img src= "img/clima.png">
-            <p>Fale "clima" e veja o clima da cidade onde voce está.</p>
+            <img src= "img/clima.png" alt="ícone de uma nuvem representando função clima">
+            <p>Fale "clima" e veja a temperatura da cidade onde voce está.</p>
 
           </div>
+          <br>
+
           <div class="boxes">
+            <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
+            <p>Fale "documento" e veja os documentos necessário para a sua viagem aeroportuária.</p>
+
+          </div>
+        </div>
+
+        <div class="innercontainer">
+          <div class="boxes">
+            <img src= "img/perdido.png" alt="ícone de um apontador representando função posição">
+            <p>Está perdido? Fale "posição" e abra nossa ferramenta de localização.</p>
+
+          </div>
+          <br>
+
+          <div class="boxes">
+            <img src="img/documento.png" alt="ícone de um documento respresentando função news">
             <p>Fale "assuntos" e veja as informações da cidade onde voce está.</p>
 
+
           </div>
+        </div>
+
         </div>
       </div>
     </div>
