--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Seu Assistente de Viagens</title>
+    <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, fale "iniciar".</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale "iniciar".</p>
         </div>
       </div>
-      <img class="assistant" src="img/assistente5.png">
-      <script src="js/iniciarvozteste.js"></script>
+      <img class="assistant" src="img/assistente5.png" alt="desenho de uma mulher segurando uma prancheta">
     </div>
     <div class= "buttondiv">
-      <button class="button1 buttoncolor" id="start"><img src="img/buttonimage7.png"></button>
+      <button class="button1 buttoncolor" id="start"><img src="img/buttonimage7.png" alt="um microfone"></button>
+      <script src="js/iniciarvoz.js"></script>
     </div>
   </body>
 </html>
