--- a/mapapage.html
+++ b/mapapage.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Assistente de Viagem - Clima</title>
+    <meta charset = "utf-8" />
     <script src= "js/mapa0.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
   <body>
     <div class="container">
-      <h1 class="city"class="title">Aguardando......</h1>
+      <h1 class="city" class="title">Aguardando......</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
+          <div class="align">
           <p id= "resultado">Fale o nome da cidade, estado ou país!</p>
+        </div>
         </div>
       </div>
 </body>
