--- a/news.html
+++ b/news.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Assistente de Viagem - Noticias</title>
     <script src= "js/news.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
+    <meta charset="utf-8">
   </head>
 
   <body>
@@ -16,6 +17,6 @@
           <p id="resultado">Diga "voltar" para retornar a homepage</p>
         </div>
       </div>
-    
+
 </body>
 </html>
