--- a/conversaopage.html
+++ b/conversaopage.html
@@ -19,12 +19,12 @@
       <h1 class="title">Conversor de Moeda</h1>
     </div>
       <div id="survey-form">
-        <div class="quote2">
+        <div class="quote3">
           <b>Você pode falar ou fazer manualmente!</b>
           <p>Fale desta forma: "<b><i>Número</i></b> de <b><i>dólar/euro/real</i></b> para <b><i>dólar/euro/real</i></b>"
           <br>
           <small>Exemplo: "50 de dólar para real".<br>
-          <small>*as vezes o número "1" não é reconhecido.</small></small></p>
+          </small></p>
 
           <label for= "moeda1">Selecione uma moeda:</label>
           <br>
