--- a/homepage.html
+++ b/homepage.html
@@ -27,50 +27,43 @@
       <div class="container2">
         <div class="container3">
           <div class="innercontainer">
-          <div class="boxes">
-            <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
-            <p>Fale "mapa" para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
+            
+              <div class="boxes">
+                <img  src="img/dollar-sign1.png" alt="ícone de um dólar representando função calculadora">
+                <p>Fale "calculadora" para abrir nosso conversor de moeda.</p>
+              </div>
 
+              <div class="boxes">
+                <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
+                <p>Fale "mapa" para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
+              </div>
+
+              <div class="boxes">
+                <img src= "img/clima.png" alt="ícone de uma nuvem representando função clima">
+                <p>Fale "clima" e veja a temperatura da cidade onde voce está.</p>
+              </div>
+          
           </div>
-          <br>
 
-          <div class="boxes">
-            <img  src="img/dollar-sign1.png" alt="ícone de um dólar representando função calculadora">
-            <p>Fale "calculadora" para abrir nosso conversor de moeda.</p>
+          <div class="innercontainer">
 
-          </div>
-        </div>
+            <div class="boxes">
+              <img src= "img/perdido.png" alt="ícone de um apontador representando função posição">
+              <p>Está perdido? Fale "posição" e abra nossa ferramenta de localização.</p>
+            </div>
 
-        <div class="innercontainer">
-          <div class="boxes">
-            <img src= "img/clima.png" alt="ícone de uma nuvem representando função clima">
-            <p>Fale "clima" e veja a temperatura da cidade onde voce está.</p>
+            <div class="boxes">
+              <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
+              <p>Fale "documento" e veja os documentos necessário para a sua viagem aeroportuária.</p>
+            </div>
 
-          </div>
-          <br>
-
-          <div class="boxes">
-            <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
-            <p>Fale "documento" e veja os documentos necessário para a sua viagem aeroportuária.</p>
-
-          </div>
-        </div>
-
-        <div class="innercontainer">
-          <div class="boxes">
-            <img src= "img/perdido.png" alt="ícone de um apontador representando função posição">
-            <p>Está perdido? Fale "posição" e abra nossa ferramenta de localização.</p>
-
-          </div>
-          <br>
-
-          <div class="boxes">
-            <img src="img/documento.png" alt="ícone de um documento respresentando função news">
-            <p>Fale "assuntos" e veja as informações da cidade onde voce está.</p>
+            <div class="boxes">
+              <img src="img/documento.png" alt="ícone de um documento respresentando função news">
+              <p>Fale "notícias" e veja as informações da cidade onde voce está.</p>
+            </div>
 
 
           </div>
-        </div>
 
         </div>
       </div>
