--- a/perdidopage.html
+++ b/perdidopage.html
@@ -3,7 +3,6 @@
   <head>
     <title>Assistente de Viagem - Clima</title>
     <meta charset = "utf-8" />
-    <script src= "js/perdido.js"></script>
     <script src= "js/voltar.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
     <p id="demo" class="hidden"></p>
@@ -12,12 +11,12 @@
 
   <body>
     <div class="container">
-      <h1 class="city" class="title">Perdido?</h1>
+      <h1 class="city" class="title">Não sabe onde está?</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p class="city" id="resultado">Fale "perdido" que acharemos sua posição!</p>
+          <p class="city" id="resultado">Fale "me encontre" que acharemos sua posição!</p>
         </div>
         </div>
       </div>
