--- a/mapapage.html
+++ b/mapapage.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container">
-      <h1 class="city" class="title">Aguardando......</h1>
+      <h1 class="city" class="title">Aguardando...</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
