--- a/mapapage.html
+++ b/mapapage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Assistente de Viagem - Clima</title>
+    <title>Assistente de Viagem - Mapa</title>
     <meta charset = "utf-8" />
     <script src= "js/mapa0.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container">
-      <h1 class="city" class="title">Aguardando...</h1>
+      <h1 class="city" class="title">Mapa</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
