--- a/perdidopage.html
+++ b/perdidopage.html
@@ -16,7 +16,7 @@
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p class="city" id="resultado">Fale "me encontre" que acharemos sua posição!</p>
+          <p class="city" id="resultado">Diga: <br><br> "Me econtre"<br><br> E acharemos sua posição!</p>
         </div>
         </div>
       </div>
