--- a/homepage.html
+++ b/homepage.html
@@ -30,17 +30,17 @@
             
               <div class="boxes">
                 <img  src="img/dollar-sign1.png" alt="ícone de um dólar representando função calculadora">
-                <p>Fale "calculadora" para abrir nosso conversor de moeda.</p>
+                <p>Fale <strong> "calculadora" </strong> para abrir nosso conversor de moeda.</p>
               </div>
 
               <div class="boxes">
                 <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
-                <p>Fale "mapa" para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
+                <p>Fale <strong>"mapa"</strong> para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
               </div>
 
               <div class="boxes">
                 <img src= "img/clima.png" alt="ícone de uma nuvem representando função clima">
-                <p>Fale "clima" e veja a temperatura da cidade onde voce está.</p>
+                <p>Fale <strong>"clima"</strong> e veja a temperatura da cidade onde voce está.</p>
               </div>
           
           </div>
@@ -49,17 +49,17 @@
 
             <div class="boxes">
               <img src= "img/perdido.png" alt="ícone de um apontador representando função posição">
-              <p>Está perdido? Fale "posição" e abra nossa ferramenta de localização.</p>
+              <p>Está perdido? Fale <strong>"posição"</strong> e abra nossa ferramenta de localização.</p>
             </div>
 
             <div class="boxes">
               <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
-              <p>Fale "documento" e veja os documentos necessário para a sua viagem aeroportuária.</p>
+              <p>Fale <strong>"documento"</strong> e veja os documentos necessário para a sua viagem aeroportuária.</p>
             </div>
 
             <div class="boxes">
               <img src="img/documento.png" alt="ícone de um documento respresentando função news">
-              <p>Fale "notícias" e veja as informações da cidade onde voce está.</p>
+              <p>Fale <strong>"notícias"</strong> e veja as informações da cidade onde voce está.</p>
             </div>
 
 
