--- a/news.html
+++ b/news.html
@@ -2,19 +2,20 @@
 <html lang="pt-br">
   <head>
     <title>Assistente de Viagem - Noticias</title>
-    <script src= "js/news.js"></script>
+    <script src= "js/newsInTest.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
-    <meta charset="utf-8">
   </head>
 
   <body>
     <div class="container">
-      <h1 class="city"class="title">Aguardando...</h1>
+      <h1 class="city"class="title"> Notícias</h1>
     </div>
-      <div id="survey-form">
-        <div class="quote2">
+      <div id="survey-form" style="padding-bottom: 50px;">
+        
+        <div class="quote3">
           <p id= "resultado">Fale o nome da cidade, estado ou país e veja as noticias!</p>
           <p id="resultado">Diga "voltar" para retornar a homepage</p>
+          <ul class="news-list style-list"></ul>
         </div>
       </div>
 
