--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale <strong>"iniciar"</strong>.</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale <strong>"iniciar"</strong>.<br><br></p>
+          <p>Quando quiser retornar à página de comandos, diga <strong>"voltar"</strong></p>
         </div>
       </div>
       <img class="assistant" src="img/assistente5.png" alt="desenho de uma mulher segurando uma prancheta">
