atualização background-color

--- a/docpage.html
+++ b/docpage.html
@@ -6,7 +6,7 @@
     <meta charset = "utf-8" />
     <script src= "js/maisdocs.js"></script>
   </head>
-  <body>
+  <body class="bkg">
     <div id="doctest" class="container">
       <h1 class="title">Documentos Nacionais</h1>
       <br>
