--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style2.css">
     <script src="js/vozhomepage.js"></script>
   </head>
-  <body>
+  <body class="bkg"> 
     <div class="container">
 
         <nav class="navbar-container">
