--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="bkg">
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
