--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
-  <body>
+  <body class="bkg">
     <div class="container">
       <h1 class="city"class="title"> Notícias</h1>
     </div>
