--- a/perdidopage.html
+++ b/perdidopage.html
@@ -9,14 +9,14 @@
     <script src= "js/perdido.js"></script>
   </head>
 
-  <body>
+  <body class="bkg">
     <div class="container">
       <h1 class="city" class="title">Não sabe onde está?</h1>
     </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p class="city" id="resultado">Diga: <br><br> "Me econtre"<br><br> E acharemos sua posição!</p>
+          <p class="city" id="resultado">Diga: <br><br> "Me encontre"<br><br> E acharemos sua posição!</p>
         </div>
         </div>
       </div>
