--- a/climapage.html
+++ b/climapage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
-  <body>
+  <body class="bkg">
     <div class="container">
       <h1 class="city" class="title">...</h1>
     </div>
