--- a/conversaopage.html
+++ b/conversaopage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
-  <body>
+  <body class="bkg">
 
     <!--seleçao das moedas e o valor-->
     <div class="container">
