--- a/mapapage.html
+++ b/mapapage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
-  <body>
+  <body class="bkg">
     <div class="container">
       <h1 class="city" class="title">Mapa</h1>
     </div>
