Update04. Entrega do trabalho.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Seu Assistente de Viagens</title>
+    <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="bkg">
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão abaixo e fale "iniciar".</p>
+          <p>Olá! Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale <strong>"iniciar"</strong>.<br><br></p>
+          <p>Quando quiser retornar à página de comandos, diga <strong>"voltar"</strong></p>
         </div>
       </div>
-      <img class="assistant" src="img/assistente5.png">
+      <img class="assistant" src="img/assistente5.png" alt="desenho de uma mulher segurando uma prancheta">
     </div>
     <div class= "buttondiv">
-      <button class="button1 buttoncolor" id="start"><img src="img/buttonimage7.png"></button>
+      <button class="button1 buttoncolor" id="start"><img src="img/buttonimage7.png" alt="um microfone"></button>
       <script src="js/iniciarvoz.js"></script>
     </div>
   </body>
