dica para voltar

--- a/conversaopage.html
+++ b/conversaopage.html
@@ -36,27 +36,31 @@
           <br> <br>
 
           <label for= "valor">Digite um valor:</label>
-        <br>
-        <input type= "number" id= "valor" value= "1.00">
-        <br> <br>
+          <br>
+          <input type= "number" id= "valor" value= "1.00">
+          <br> <br>
 
-        <label for= "moeda2">Selecione a moeda para conversão:</label>
-        <br>
-        <select name= "moeda2" id= "moeda2">
-          <option value= "USD">Dólar Americano</option>
-          <option value= "EUR">Euro</option>
-          <option value= "BRL">Real</option>
-        </select>
-        <br> <br>
+          <label for= "moeda2">Selecione a moeda para conversão:</label>
+          <br>
+          <select name= "moeda2" id= "moeda2">
+            <option value= "USD">Dólar Americano</option>
+            <option value= "EUR">Euro</option>
+            <option value= "BRL">Real</option>
+          </select>
+          <br> <br>
 
-        <button  onclick= "conversao()">Converter</button>
-        <br>
+          <button  onclick= "conversao()">Converter</button>
+          <br>
 
-    <!--onde o resultado irá aparecer:-->
-      <p id= "resultado"></p>
+          <!--onde o resultado irá aparecer:-->
+            <p id= "resultado"></p>
       
-  </div>
-  </div>
+        </div>
+
+        <div class="back">
+          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
+        </div>
+      </div>
 
 
     <script>
