--- a/mapapage.html
+++ b/mapapage.html
@@ -8,15 +8,18 @@
   </head>
 
   <body class="bkg">
-    <div class="container">
-      <h1 class="city" class="title">Mapa</h1>
-    </div>
+      <div class="container">
+        <h1 class="city" class="title">Mapa</h1>
+      </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
           <p id= "resultado">Fale o nome da cidade, estado ou país!</p>
         </div>
         
+        </div>
+        <div class="back">
+          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
         </div>
       </div>
 </body>
