--- a/climapage.html
+++ b/climapage.html
@@ -9,16 +9,19 @@
   </head>
 
   <body class="bkg">
-    <div class="container">
-      <h1 class="city" class="title">...</h1>
-    </div>
+      <div class="container" style="margin-top: 30px;">
+        <h1 class="city" class="title">...</h1>
+      </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <img src="img/clima1.png">
-          <p class="city"></p>
-          <p id="resultado2"><span id="resultado2">0</span>C°</p>
+            <img src="img/clima1.png">
+            <p class="city"></p>
+            <p id="resultado2"><span id="resultado2">0</span>C°</p>
+          </div>
         </div>
+        <div class="back">
+          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
         </div>
       </div>
 </body>
