--- a/news.html
+++ b/news.html
@@ -16,6 +16,11 @@
           <p id= "resultado">Fale o nome da cidade, estado ou país e veja as noticias!</p>
           <ul class="news-list style-list"></ul>
         </div>
+        
+        <div class="back">
+          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
+        </div>
+
       </div>
 
 </body>
