--- a/perdidopage.html
+++ b/perdidopage.html
@@ -10,14 +10,18 @@
   </head>
 
   <body class="bkg">
-    <div class="container">
-      <h1 class="city" class="title">Não sabe onde está?</h1>
-    </div>
+      <div class="container">
+        <h1 class="city" class="title">Não sabe onde está?</h1>
+      </div>
+
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p class="city" id="resultado">Diga: <br><br> "Me encontre"<br><br> E acharemos sua posição!</p>
+            <p class="city" id="resultado">Diga: <br><br> "Me encontre"<br><br> E acharemos sua posição!</p>
+          </div>
         </div>
+        <div class="back">
+          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
         </div>
       </div>
 </body>
