beta - função "aeroportos"

--- a/homepage.html
+++ b/homepage.html
@@ -71,6 +71,10 @@
               <img src= "img/rota.png" alt="ícone de um caminhão representando função rotas">
               <p>Quer saber como chegar em algum local? Fale <strong>"trajeto"</strong>!</p>
             </div>
+            
+             <div class="boxes">
+              <p>Fale <strong>"aeroportos"</strong> e veja os aeroportos na cidade/estado desejado.</p>
+            </div>
 
 
           </div>
