beta - fix palavra chave

--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
             </div>
             
              <div class="boxes">
-              <p>Fale <strong>"aeroportos"</strong> e veja os aeroportos na cidade/estado desejado.</p>
+              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos na cidade/estado desejado.</p>
             </div>
 
 
