Update07. Nova função aroportos made by Devanir incorporada no trabalho.

--- a/homepage.html
+++ b/homepage.html
@@ -71,9 +71,10 @@
               <img src= "img/rota.png" alt="ícone de um caminhão representando função rotas">
               <p>Quer saber como chegar em algum local? Fale <strong>"trajeto"</strong>!</p>
             </div>
-            
+
              <div class="boxes">
-              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos na cidade/estado desejado.</p>
+               <img src="img/aviao.png" alt="ícone de um avião de papel representando função aeroporto">
+              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos na cidade/estado informado.</p>
             </div>
 
 
