--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
 
               <div class="boxes">
                 <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
-                <p>Fale <strong>"mapa"</strong> para ser direcionado até nossa ferramenta de busca guiada por voz!</p>
+                <p>Fale <strong>"mapa"</strong> para ser direcionado até nossa ferramenta de busca!</p>
               </div>
 
               <div class="boxes">
@@ -54,7 +54,7 @@
 
             <div class="boxes">
               <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
-              <p>Fale <strong>"documento"</strong> e veja os documentos necessário para a sua viagem aeroportuária.</p>
+              <p>Fale <strong>"documento"</strong> e veja os documentos necessário para a sua viagem.</p>
             </div>
 
             <div class="boxes">
