Update10. Vários fixes, erros de digitação e bug no comando de voz.

--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,7 @@
 
               <div class="boxes">
                 <img src= "img/clima.png" alt="ícone de uma nuvem representando função clima">
-                <p>Fale <strong>"clima"</strong> e veja a temperatura da cidade onde voce está.</p>
+                <p>Fale <strong>"clima"</strong> e veja a temperatura da cidade onde você está.</p>
               </div>
 
           </div>
@@ -59,7 +59,7 @@
 
             <div class="boxes">
               <img src="img/documento.png" alt="ícone de um documento respresentando função news">
-              <p>Fale <strong>"notícias"</strong> e veja as informações da cidade onde voce está.</p>
+              <p>Fale <strong>"notícias"</strong> e abra nossa página de notícias recentes da cidade ou país informado.</p>
             </div>
 
 
@@ -74,7 +74,7 @@
 
              <div class="boxes">
                <img src="img/aviao.png" alt="ícone de um avião de papel representando função aeroporto">
-              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos na cidade/estado informado.</p>
+              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos da cidade ou estado informado.</p>
             </div>
 
 
