--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="position">
       <div class="comments">
         <div class="comment bubble">
-          <p>Olá! <br>Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale <strong>"iniciar"</strong>.<br></p>
+          <p>Olá! Sou a NUNA. <br>Serei sua nova assistente de viagens!<br><br>Para começarmos, clique no botão e fale <strong>"iniciar"</strong>.<br></p>
         </div>
       </div>
       <img class="assistant" src="img/assistente5.png" alt="desenho de uma mulher segurando uma prancheta">
