--- a/news.html
+++ b/news.html
@@ -11,12 +11,12 @@
       <h1 class="city"class="title"> Notícias</h1>
     </div>
       <div id="survey-form" style="padding-bottom: 50px;">
-        
+
         <div class="quote3">
-          <p id= "resultado">Fale o nome da cidade, estado ou país e veja as noticias!</p>
+          <p id= "resultado">Fale o nome da cidade, estado ou país e veja as principais notícias!</p>
           <ul class="news-list style-list"></ul>
         </div>
-        
+
         <div class="back">
           <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
         </div>
