--- a/rotaspage.html
+++ b/rotaspage.html
@@ -14,12 +14,11 @@
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p id= "resultado">Fale na seguinte ordem:<br><br> origem <u>para</u> destino.</p>
+          <p id= "resultado">"São Paulo <u>para</u> Rio de Janeiro."</p>
         </div>
 
         </div>
         <div class="back">
-          <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
         </div>
       </div>
 </body>
