Update12. Fix de nav-bar e typo.

--- a/homepage.html
+++ b/homepage.html
@@ -54,7 +54,7 @@
 
             <div class="boxes">
               <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
-              <p>Fale <strong>"documento"</strong> e veja os documentos necessário para a sua viagem.</p>
+              <p>Fale <strong>"documento"</strong> e veja os documentos necessários para a sua viagem.</p>
             </div>
 
             <div class="boxes">
