--- a/aeroportospage.html
+++ b/aeroportospage.html
@@ -19,7 +19,7 @@
     </div>
       <div id="survey-form">
         <div class="quote3">
-          <b>Fale um estado do Brail e verá os aeroportos daquele estado.</b><br>
+          <b>Fale um estado do Brasil e verá os aeroportos daquele estado.</b><br>
 
           <!--onde o resultado irá aparecer:-->
             <p id= "resultado"></p>
