notícias por voz

--- a/news.html
+++ b/news.html
@@ -9,19 +9,12 @@
   <body class="bkg">
     <div class="container">
       <h1 class="city"class="title"> Notícias</h1>
+      <p>Fale o nome da cidade, estado ou país e veja as principais notícias!</p>
     </div>
       <div id="survey-form" style="padding-bottom: 50px;">
-
-        <div class="quote3 row">
-          <p id= "resultado">Fale o nome da cidade, estado ou país e veja as principais notícias!</p>
-          <ul class="news-list style-list"></ul>
+        
+        <div class="quote4 row news-list">
           
-          <div class="div-float"><p>Div 1</p></div>
-          <div class="div-float"><p>Div 2</p></div>
-          <div class="div-float"><p>Div 3</p></div>
-          <div class="div-float"><p>Div 4</p></div>
-          <div class="div-float"><p>Div 5</p></div>
-          <div class="div-float"><p>Div 6</p></div>
 
         </div>
 
