função "filmes" adicionada (api sexto semestre)

--- a/homepage.html
+++ b/homepage.html
@@ -77,7 +77,11 @@
               <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos da cidade ou estado informado.</p>
             </div>
 
-
+            <div class="boxes">
+              <img src="" alt="ícone de alguma coisa relacionada a filmes">
+             <p>Fale <strong>"filmes"</strong> e receba sujestões de filmes.</p>
+           </div>
+            
           </div>
 
         </div>
