--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <title>Assistente de Viagem - Noticias</title>
-    <script src= "js/newsInTest.js"></script>
+    <script src= "js/news.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
   </head>
 
