Update01. Algumas melhorias na interface e page documentação.

--- a/docpage.html
+++ b/docpage.html
@@ -14,79 +14,79 @@
         <div class="checkcontainer">
             <p class="dropbold">Para passageiros brasileiros, pelo menos um(a)</p>
             <label class="deco" for="pass">
-              <input id="pass" type="checkbox" value="pass" name="pass">Passaporte nacional
+               <p class="font_size">Passaporte nacional</p>
             </label>
             <br>
 
             <label class="deco" for="rg">
-              <input id="rg" type="checkbox" value="rg" name="rg">Carteira de identidade(RG)
+               <p class="font_size">Carteira de identidade(RG)</p>
             </label>
             <br>
 
             <label class="deco" for="ip">
-              <input id="ip" type="checkbox" value="ip" name="ip">Identidade expedida por órgão da Presidência
+               <p class="font_size">Identidade expedida por órgão da Presidência</p>
             </label>
             <br>
 
             <label class="deco" for="ij">
-            <input id="ij" type="checkbox" value="ij" name="ij">Identidade expedida pelo poder Judiciário
+             <p class="font_size">Identidade expedida pelo poder Judiciário</p>
             </label>
             <br>
 
             <label class="deco" for="cnh">
-            <input id="cnh" type="checkbox" value="cnh" name="cnh">Carteira nacional de habilitação
+             <p class="font_size">Carteira nacional de habilitação</p>
             </label>
             <br>
 
             <label class="deco" for="cct">
-            <input id="cct" type="checkbox" value="cct" name="cct">Carteira de trabalho
+             <p class="font_size">Carteira de trabalho</p>
             </label>
             <br>
 
             <label class="deco" for="cp">
-            <input id="cp" type="checkbox" value="cp" name="cp">Carteira profissional
+             <p class="font_size">Carteira profissional</p>
             </label>
             <br>
 
             <label class="deco" for="outro">
-            <input id="outro" type="checkbox" value="outro" name="outro">Identificação com foto e fé pública em todo território nacional
+             <p class="font_size">Identificação com foto e fé pública em todo território nacional</p>
             </label>
             <br>
 
             <p class="dropbold">Para crianças menores de 12 anos</p>
             <label class="deco" for="df">
-            <input id="df" type="checkbox" value="df" name="df">Documento que comprove filiação ou parentesco
+             <p class="font_size">Documento que comprove filiação ou parentesco</p>
             </label>
             <br>
 
             <label class="deco" for="cn">
-            <input id="cn" type="checkbox" value="cn" name="cn">Certidão de nascimento ou R.G.
+             <p class="font_size">Certidão de nascimento ou R.G.</p>
             </label>
             <br>
 
             <label class="deco" for="outros2">
-            <input id="outros2" type="checkbox" value="outros2" name="outros2">Caso a viagem seja com amigos será necessário autorização
+             <p class="font_size">Caso a viagem seja com amigos será necessário autorização</p>
             </label>
             <br>
 
             <p class="dropbold">Para turistas de outras nacionalidades</p>
             <label class="deco" for="pass2">
-            <input id="pass2" type="checkbox" value="df" name="df">Passaporte Estrangeiro
+             <p class="font_size">Passaporte Estrangeiro</p>
             </label>
             <br>
 
             <label class="deco" for="rne">
-            <input id="rne" type="checkbox" value="cn" name="cn">Cédula de Identidade de Estrangeiro(RNE)
+             <p class="font_size">Cédula de Identidade de Estrangeiro(RNE)</p>
             </label>
             <br>
 
             <label class="deco" for="idc">
-            <input id="idc" type="checkbox" value="outros2" name="outros2">Identidade diplomática ou consular
+             <p class="font_size">Identidade diplomática ou consular</p>
             </label>
             <br>
 
             <label class="deco" for="outros3">
-            <input id="outros3" type="checkbox" value="cn" name="cn">Documento, resultado de acordos internacionais
+             <p class="font_size">Documento, resultado de acordos internacionais</p>
             </label>
             <br>
 
@@ -102,32 +102,32 @@
         <div class="checkcontainer">
           <p class="dropbold">Para passageiros brasileiros, ao menos um(a)</p>
             <label class="deco" for="pass3">
-            <input id="pass3" type="checkbox" value="pass" name="pass">Passaporte válido
+             <p class="font_size">Passaporte válido</p>
             </label>
             <br>
 
             <label class="deco" for="lp">
-            <input id="lp" class="deco" type="checkbox" value="rg" name="rg">Laissez-passer
+              <p class="font_size">Laissez-passer</p>
             </label>
             <br>
 
             <label class="deco" for="aut">
-            <input id="aut" class="deco" type="checkbox" value="ip" name="ip">Autorização de retorno ao Brasil
+              <p class="font_size">Autorização de retorno ao Brasil</p>
             </label>
             <br>
 
             <label class="deco" for="sc">
-            <input id="sc" class="deco" type="checkbox" value="ij" name="ij">Salvo-conduto
+              <p class="font_size">Salvo-conduto</p>
             </label>
             <br>
 
             <label class="deco" for="cic">
-            <input id="cic" class="deco" type="checkbox" value="cnh" name="cnh">Cédula de identidade civil ou documento estrangeiro equivalente
+              <p class="font_size">Cédula de identidade civil ou documento estrangeiro equivalente</p>
             </label>
             <br>
 
             <label class="deco" for="cmc">
-            <input id="cmc" class="deco" type="checkbox" value="cct" name="cct">Carteira de matrícula consular
+              <p class="font_size">Carteira de matrícula consular</p>
             </label>
             <br>
 
@@ -135,22 +135,22 @@
             <p class="dropbold">Para crianças e adolescentes menores de 18 anos</p>
 
             <label class="deco" for="pass4">
-            <input id="pass4" class="deco" type="checkbox" value="df" name="df">Passaporte
+             <p class="font_size">Passaporte</p>
             </label>
             <br>
 
             <label class="deco" for="df2">
-            <input id="df2" class="deco" type="checkbox" value="df" name="df">Documento que comprove filiação ou parentesco
+             <p class="font_size">Documento que comprove filiação ou parentesco</p>
             </label>
             <br>
 
             <label class="deco" for="cn2">
-            <input id="cn2" type="checkbox" value="cn" name="cn">Certidão de nascimento ou R.G.
+             <p class="font_size">Certidão de nascimento ou R.G.</p>
             </label>
             <br>
 
             <label class="deco" for="outros4">
-            <input id="outros4" type="checkbox" value="outros2" name="outros2">Caso a viagem seja com amigos será necessário autorização
+             <p class="font_size">Caso a viagem seja com amigos será necessário autorização</p>
             </label>
             <br>
 
