--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
               </a>
             </li>
             <li class="list-style2">
-              <a class="link-style" href="#">
+              <a class="link-style" href="docpage2.html">
                 <img src="img/book.png" alt="ícone de um livro representando a página de documentação">Documentação
               </a>
             </li>
@@ -78,10 +78,10 @@
             </div>
 
             <div class="boxes">
-              <img src="" alt="ícone de alguma coisa relacionada a filmes">
-             <p>Fale <strong>"filmes"</strong> e receba sujestões de filmes.</p>
+              <img src="img/filmes.png" alt="ícone de alguma coisa relacionada a filmes">
+             <p>Fale <strong>"filmes"</strong> e receba sugestões de filmes.</p>
            </div>
-            
+
           </div>
 
         </div>
