--- a/rotaspage.html
+++ b/rotaspage.html
@@ -21,5 +21,8 @@
         <div class="back">
         </div>
       </div>
+      <div class="back">
+        <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
+      </div>
 </body>
 </html>
