Novo css news e pequenas correções

--- a/homepage.html
+++ b/homepage.html
@@ -53,13 +53,13 @@
             </div>
 
             <div class="boxes">
-              <img src= "img/news.png" alt="ícone de uma checklist representando função documentação">
+              <img src= "img/documento.png" alt="ícone de uma checklist representando função documentação">
               <p>Fale <strong>"documento"</strong> e veja os documentos necessários para a sua viagem.</p>
             </div>
 
             <div class="boxes">
-              <img src="img/documento.png" alt="ícone de um documento respresentando função news">
-              <p>Fale <strong>"notícias"</strong> e abra nossa página de notícias recentes da cidade ou país informado.</p>
+              <img src="img/news.png" alt="ícone de um documento respresentando função news">
+              <p>Fale <strong>"notícias"</strong> e abra nossa página de notícias da cidade ou país informado.</p>
             </div>
 
 
