--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
   <head>
     <title>Assistente de Viagem - Noticias</title>
     <script src= "js/news.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style3.css">
+    <link rel="stylesheet" type="text/css" href="css/stylenews.css">
   </head>
 
   <body class="bkg">
