Update03. Correção no CSS e typos.

--- a/aeroportospage.html
+++ b/aeroportospage.html
@@ -15,14 +15,14 @@
   <body class="bkg">
     <!--seleçao das moedas e o valor-->
     <div class="container">
-      <h1 class="title">Aeroportos:</h1>
+      <h1 class="title">Lista de Aeroportos:</h1>
     </div>
       <div id="survey-form">
         <div class="quote3">
-          <b>Fale um estado do Brasil e verá os aeroportos daquele estado.</b><br>
+
 
           <!--onde o resultado irá aparecer:-->
-            <p id= "resultado"></p>
+            <p class="fontSize" id= "resultado">Fale um <u>estado</u> do Brasil.</p>
 
 
         </div>
