--- a/docpage2.html
+++ b/docpage2.html
@@ -41,7 +41,7 @@
           <li>Mapa, disponibiliza o mapa de qualquer cidade, estado ou país que o usuário informar;</li>
           <li>Documento, disponibiliza uma lista de documentos necessários para a sua viagem;</li>
           <li>Posição, procura e mostra a localização do usuário;</li>
-          <li>Aeroporto, disponibiliza uma lista de aeroportos da cidade ou estado informado pelo usuário;</li>
+          <li>Aeroporto, disponibiliza uma lista de aeroportos do estado informado pelo usuário;</li>
           <li>Clima, procura e mostra a temperatura do local onde você está visitando;</li>
           <li>Notícias, para se informar sobre a cidade que irá visitar;</li>
           <li>Trajeto, procura uma rota para chegar até o destino informado pelo usuário;</li>
