--- a/homepage.html
+++ b/homepage.html
@@ -30,12 +30,12 @@
 
               <div class="boxes">
                 <img  src="img/dollar-sign1.png" alt="ícone de um dólar representando função calculadora">
-                <p>Fale <strong> "calculadora" </strong> para abrir nosso conversor de moeda.</p>
+                <p>Fale <strong> "calculadora" </strong> para abrir o conversor de moedas.</p>
               </div>
 
               <div class="boxes">
                 <img class="target" src="img/map2.png" alt="ícone de um mapa representando função mapa">
-                <p>Fale <strong>"mapa"</strong> para ser direcionado até nossa ferramenta de busca!</p>
+                <p>Fale <strong>"mapa"</strong> para ser direcionado até a ferramenta de busca!</p>
               </div>
 
               <div class="boxes">
@@ -49,7 +49,7 @@
 
             <div class="boxes">
               <img src= "img/perdido.png" alt="ícone de um apontador representando função posição">
-              <p>Está perdido? Fale <strong>"posição"</strong> e abra nossa ferramenta de localização.</p>
+              <p>Está perdido? Fale <strong>"posição"</strong> e abra a ferramenta de localização.</p>
             </div>
 
             <div class="boxes">
@@ -59,7 +59,7 @@
 
             <div class="boxes">
               <img src="img/news.png" alt="ícone de um documento respresentando função news">
-              <p>Fale <strong>"notícias"</strong> e abra nossa página de notícias da cidade ou país informado.</p>
+              <p>Fale <strong>"notícias"</strong> e veja as principais notícias da cidade ou país informado.</p>
             </div>
 
 
@@ -74,12 +74,12 @@
 
              <div class="boxes">
                <img src="img/aviao.png" alt="ícone de um avião de papel representando função aeroporto">
-              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos da cidade ou estado informado.</p>
+              <p>Fale <strong>"aeroporto"</strong> e veja os aeroportos do estado informado.</p>
             </div>
 
             <div class="boxes">
               <img src="img/filmes.png" alt="ícone de alguma coisa relacionada a filmes">
-             <p>Fale <strong>"filmes"</strong> e receba sugestões de filmes.</p>
+             <p>Viagem longa? Fale <strong>"filmes"</strong> e receba uma sugestão do que assistir.</p>
            </div>
 
           </div>
