Alinhamento Função news

--- a/news.html
+++ b/news.html
@@ -10,9 +10,9 @@
     <div class="container">
       <h1 class="city"class="title"> Notícias</h1>
       <p>Fale o nome da cidade, estado ou país e veja as principais notícias!</p>
-      <p>Para abrir a notícia diga o número referente a ela mais a palavra link. Exemplo: "link 1".</p>
+      <p>Para abrir a notícia siga o exemplo: "link 1".</p>
     </div>
-      <div id="survey-form" style="padding-bottom: 50px;">
+      <div id="survey-form" style= "margin-top: -50px;">
         
         <div class="quote4 row news-list">
          
